# Yuzu

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
inc/render/: IRender.hpp  Sdl2.hpp
src/: main.cpp
src/render/: Sdl2.cpp
